# spdx-verify-action

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  action.yaml  pyproject.toml  pytest.ini  spdx-config.yaml  spdx_verify.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-test-release.yaml  build-test.yaml  demo-success.yml  demo.yml  publish.yml
tests/: __init__.py  conftest.py  test_config.py  test_e2e.py  test_environment.py  test_gitignore_integration.py  test_integration.py  test_pre_commit_mode.py  test_pypackages_fix.py  test_spdx_verifier.py  test_utils.py
tests/test_files/: no_license.md  no_license.rst  no_license.txt  no_license_no_ext  test.js  test.md  test.rst  test.txt  test_no_ext  test_no_license.py  test_valid_example.py  test_wrong_license.py
